--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ on:
       branches: 
       - master
 
-name: Deploy to Amazon S3 & Invalidate Cloudfront
+name: Deploy
 
 jobs:
   deploy:
@@ -13,7 +13,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
+      
+    - name: Delete unnecessary folders
+      run: rm -rf .git .github
+      
     - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
